--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -3,14 +3,14 @@ about:
   enable : true
   title : About Us
   about_item :
-  - icon : ti-ruler-pencil # themify icon pack : https://themify.me/themify-icons
-    title : We're Creative
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+  - icon : ti-light-bulb # themify icon pack : https://themify.me/themify-icons
+    title : OPTIMUM SOLUTIONS
+    content : Offers tailored industrial solutions designed to meet diverse and specialized client needs.
 
   - icon : ti-cup # themify icon pack : https://themify.me/themify-icons
-    title : We're Professional
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
-
-  - icon : ti-thought # themify icon pack : https://themify.me/themify-icons
-    title : We're Genius
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+    title : REPUTED MANUFACTURERS
+    content : Partnering with top-tier manufacturers, they ensure high-quality and reliable products.
+  
+  - icon : ti-timer # themify icon pack : https://themify.me/themify-icons
+    title : SPEEDY LOGISTICS
+    content : Committed to timely delivery, their logistics ensure efficient supply chain management.
