--- a/data/en/banner.yml
+++ b/data/en/banner.yml
@@ -5,7 +5,7 @@ banner:
   bg_image : "images/backgrounds/hero-area.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "Empowering Oman’s industrial production with on-time supplies."
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!"
+  content : "Providing exceptional service by bringing you the products and solutions you need, when you need them."
   button:
     enable : true
     label : "Explore Us"
