--- a/data/en/portfolio.yml
+++ b/data/en/portfolio.yml
@@ -1,7 +1,7 @@
 #################################### portfolio ###############################
 portfolio:
   enable : true
-  title : Our Works
+  title : Our Products
   portfolio_item :
     # portfolio item loop
     - name : Tag Design
