--- a/data/en/service.yml
+++ b/data/en/service.yml
@@ -1,34 +1,30 @@
 ################################# Service #################################
 service:
   enable : true
-  title : Our Services
-  service_item :
-    # service item loop
-    - name : WordPress Theme
-      icon : ti-world # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
-      
-    # service item loop
-    - name : Responsive Design
-      icon : ti-layout # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
-      
-    # service item loop
-    - name : Media &amp; Advertisement
-      icon : ti-blackboard # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
-      
-    # service item loop
-    - name : Graphic Design
-      icon : ti-palette # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
-      
-    # service item loop
-    - name : Apps Development
-      icon : ti-package # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
-      
-    # service item loop
-    - name : Networking
-      icon : ti-pulse # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus.Nullam iaculis arcu at mauris dapibus consectetur.
+  title : What We Do?
+  service_item:
+  - name: "Electrical Consumables and Devices"
+    image: images/products/electrical.jpg
+    content: "Power up your production with our advanced electrical industrial equipment."
+  
+  - name: "Instrumentation and Industrial Automation"
+    image: images/products/instrument.jpg
+    content: "Our instrumentation range includes condition monitoring sensors and equipment."
+  
+  - name: "Mechanical, Oil and Gas"
+    image: images/products/mech.jpg
+    content: "Power up your operations with our top-quality Mechanical, Oil & Gas Equipments."
+  
+  - name: "Lighting"
+    image: images/products/lighting.jpg
+    content: "Brighten up your space with our cutting-edge Lighting Equipment."
+  
+  - name: "Turbine Spare Parts"
+    image: images/products/turbine.jpg
+    content: "Best quality spare parts for your Gas and steam turbines."
+  
+  - name: "Safety and Material Handling Equipment"
+    image: images/products/safety.jpg
+    content: "Reliable and efficient safety solutions for your industrial operations."
+  
+  link: "#portfolio"
