--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -8,7 +8,7 @@ about:
     content : Offers tailored industrial solutions designed to meet diverse and specialized client needs.
 
   - icon : ti-cup # themify icon pack : https://themify.me/themify-icons
-    title : REPUTED MANUFACTURERS
+    title : MANUFACTURERS
     content : Partnering with top-tier manufacturers, they ensure high-quality and reliable products.
   
   - icon : ti-timer # themify icon pack : https://themify.me/themify-icons
