--- a/data/en/clients_slider.yml
+++ b/data/en/clients_slider.yml
@@ -1,6 +1,6 @@
 ############################### team ############################
 clients_slider:
-  enable : true
+  enable : false
   title : Clients
   logo_slider :
     # team member loop
