--- a/data/en/cta.yml
+++ b/data/en/cta.yml
@@ -4,9 +4,7 @@ cta:
   bg_image : "images/backgrounds/bg-white-wall.jpg"
   bg_image_webp : "images/backgrounds/bg-white-wall.webp"
   title : "Mahaa Technology & Business Solutions(MBTS)"
-  content: "It is a novel initiative catering to the needs of specialised industry requirements and authorized distributor of 
-
- range of protective coatings within the Sultanate of Oman. Our well established business operations and international vendor connections have resulted in a track record of success which continues to grow with every new project and supply agreement that we take on."
+  content: "A leading provider of specialized industrial equipment, consumables, and services in the Sultanate of Oman. With our strong track record of success and international vendor connections, we are dedicated to meeting your unique industry requirements. Our vision is to set new standards in quality, performance, and innovation, empowering businesses to reach their full potential."
   button:
     enable : true
     label : "Our Values"
