--- a/data/en/banner.yml
+++ b/data/en/banner.yml
@@ -4,8 +4,9 @@ banner:
   bg_image_webp : "images/backgrounds/hero-area.webp"
   bg_image : "images/backgrounds/hero-area.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
-  title : "Empowering Oman’s industrial production with on-time supplies."
-  content : "Providing exceptional service by bringing you the products and solutions you need, when you need them."
+  title : "All the solutions you need"
+  # content : "Providing exceptional service by bringing you the products and solutions you need, when you need them."
+  image : "images/logo.png"
   button:
     enable : true
     label : "Explore Us"
