--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meghna-hugo",
   "version": "2.1.1",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "author": "gethugothemes",
   "scripts": {
     "dev": "hugo server",
